added expenseType.  miw-upm/goa#164