@@ -14,10 +14,10 @@ import org.springframework.test.context.ActiveProfiles;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @DataMongoTest
 @ActiveProfiles("test")
@@ -26,7 +26,8 @@ class InvoiceRepositoryTest {
     @Autowired
     private InvoiceRepository invoiceRepository;
 
-    private Invoice invoice;
+    private Invoice firstInvoice;
+    private Invoice secondInvoice;
 
     @BeforeEach
     void setUp() {
@@ -34,7 +35,7 @@ class InvoiceRepositoryTest {
         UUID engagementId = UUID.randomUUID();
         UUID userId = UUID.randomUUID();
         UUID paymentId = UUID.randomUUID();
-        this.invoice = Invoice.builder()
+        this.firstInvoice = Invoice.builder()
                 .id(UUID.randomUUID())
                 .billingInfo(BillingInfo.builder()
                         .userId(userId)
@@ -70,48 +71,78 @@ class InvoiceRepositoryTest {
                         .description("gasto")
                         .baseAmount(BigDecimal.valueOf(15))
                         .vatRate(10)
+                        .expenseType(ExpenseType.CURRENT)
                         .build()))
                 .discounts(List.of(BigDecimal.TEN))
                 .pdfPath("/tmp/invoice.pdf")
                 .build();
+        this.secondInvoice = Invoice.builder()
+                .id(UUID.randomUUID())
+                .billingInfo(BillingInfo.builder()
+                        .userId(userId)
+                        .fullName("John Doe")
+                        .identity("12345678A")
+                        .fullAddress("Madrid")
+                        .build())
+                .emissionDate(LocalDate.of(2026, 3, 25))
+                .operationDate(LocalDate.of(2026, 3, 24))
+                .series("A")
+                .number(2)
+                .baseAmount(BigDecimal.valueOf(120))
+                .vatAmount(BigDecimal.valueOf(25.2))
+                .vatRate(BigDecimal.valueOf(21))
+                .engagement(EngagementSnapshot.builder().id(engagementId).build())
+                .payments(List.of(Payment.builder()
+                        .id(UUID.randomUUID())
+                        .date(LocalDate.of(2026, 3, 24))
+                        .amount(BigDecimal.valueOf(120))
+                        .method(PaymentMethod.BIZUM)
+                        .user(UserSnapshot.builder().id(userId).build())
+                        .build()))
+                .priorPayments(List.of())
+                .expenses(List.of())
+                .discounts(List.of())
+                .pdfPath("/tmp/invoice-2.pdf")
+                .build();
+        this.invoiceRepository.saveAll(List.of(new InvoiceEntity(this.firstInvoice), new InvoiceEntity(this.secondInvoice)));
     }
 
     @Test
-    void shouldSaveInvoice() {
-        InvoiceEntity saved = this.invoiceRepository.save(new InvoiceEntity(this.invoice));
-
-        assertNotNull(saved);
-        assertEquals(this.invoice.getId().toString(), saved.getId());
-        assertEquals(this.invoice.getEngagement().getId().toString(), saved.getEngagementId());
-        assertEquals(this.invoice.getBillingInfo(), saved.getBillingInfo().toDomain());
-        assertEquals(this.invoice.getPayments(), saved.getPayments().stream().map(paymentEntity -> paymentEntity.toDomain()).toList());
-        assertEquals(this.invoice.getPriorPayments(), saved.getPriorPayments().stream().map(paymentEntity -> paymentEntity.toDomain()).toList());
-        assertEquals(this.invoice.getExpenses(), saved.toDomain().getExpenses());
-    }
-
-    @Test
-    void shouldFindInvoiceById() {
-        InvoiceEntity saved = this.invoiceRepository.save(new InvoiceEntity(this.invoice));
-        Optional<InvoiceEntity> optional = this.invoiceRepository.findById(saved.getId());
-
-        assertTrue(optional.isPresent());
-        assertEquals(saved.getId(), optional.get().getId());
-        assertEquals(saved.getEngagementId(), optional.get().getEngagementId());
-        assertEquals(saved.getEmissionDate(), optional.get().getEmissionDate());
-    }
-
-    @Test
-    void shouldFindInvoiceByEmissionDateFrom() {
-        InvoiceEntity saved = this.invoiceRepository.save(new InvoiceEntity(this.invoice));
-
-        List<InvoiceEntity> all = this.invoiceRepository.findAllByOrderByEmissionDateDesc();
+    void shouldFindByEmissionDateGreaterThanEqualOrderByEmissionDateDesc() {
         List<InvoiceEntity> byDate = this.invoiceRepository.findByEmissionDateGreaterThanEqualOrderByEmissionDateDesc(
-                saved.getEmissionDate()
+                LocalDate.of(2026, 3, 21)
         );
 
-        assertEquals(1, all.size());
-        assertEquals(saved.getId(), all.get(0).getId());
         assertEquals(1, byDate.size());
-        assertEquals(saved.getId(), byDate.get(0).getId());
+        assertEquals(this.secondInvoice.getId().toString(), byDate.getFirst().getId());
+    }
+
+    @Test
+    void shouldFindByEngagementIdPrefixOrderByEmissionDateDesc() {
+        String engagementPrefix = this.firstInvoice.getEngagement().getId().toString().substring(0, 4);
+        List<InvoiceEntity> result = this.invoiceRepository.findByEngagementIdStartingWithOrderByEmissionDateDesc(engagementPrefix);
+
+        assertEquals(2, result.size());
+        assertEquals(this.secondInvoice.getId().toString(), result.getFirst().getId());
+        assertEquals(this.firstInvoice.getId().toString(), result.get(1).getId());
+    }
+
+    @Test
+    void shouldFindByEngagementIdPrefixAndEmissionDateOrderByEmissionDateDesc() {
+        String engagementPrefix = this.firstInvoice.getEngagement().getId().toString().substring(0, 4);
+        List<InvoiceEntity> result = this.invoiceRepository
+                .findByEngagementIdStartingWithAndEmissionDateGreaterThanEqualOrderByEmissionDateDesc(
+                        engagementPrefix, LocalDate.of(2026, 3, 22));
+
+        assertEquals(1, result.size());
+        assertEquals(this.secondInvoice.getId().toString(), result.getFirst().getId());
+    }
+
+    @Test
+    void shouldFindFirstBySeriesOrderByNumberDesc() {
+        var optional = this.invoiceRepository.findFirstBySeriesOrderByNumberDesc("A");
+
+        assertTrue(optional.isPresent());
+        assertEquals(2, optional.get().getNumber());
     }
 }
